--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-     <h1>Ruby on Rails スケジュール管理アプリ</h1>
+     <h1>Ruby on Rails スケジュール管理アプリ. </h1>
     </header>
      
     <%= yield %>
