--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,9 +26,9 @@
           <td><%= user.title %></td>
           <td><%= user.start %></td>
           <td><%= user.fin %></td>
-          <td><%= if user.all == true %></td>
-          <%= "○" %>
-          <%= end %>
+          <td><%= if user.all == true
+          "○" 
+          end %></td>
           <td><%= user.updated_at.to_s(:datetime_jp) %></td>
           <td>
               <%= link_to "確認", user %>
