--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,9 @@
    </tr>
    <tr>
      <th>終日</th>
-     <td><%= @user.all %></td>
+     <td><%= if @user.all == true
+          "○" 
+          end %></td>
    </tr>
    <tr>
      <th>メモ</th>
