新規作成の修正

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,7 +12,7 @@
         </tr>
         <tr>
           <th><%= f.label :fin ,"終了日" %></th>
-          <td><%= f.date_field :fin , min: Date.current %></td>
+          <td><%= f.date_field :fin , min: Date.tomorrow %></td>
         </tr>
         <tr>
           <th><%= f.label :all ,"終日" %></th>
