--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,11 +9,11 @@
         </tr>
         <tr>
           <th><%= f.label :start ,"開始日" %></th>
-          <td><%= f.date_field :start, min: Date.current   %></td>
+          <td><%= f.date_field :start, min: Date.current %></td>
         </tr>
         <tr>
           <th><%= f.label :fin ,"終了日" %></th>
-          <td><%= f.date_field :fin , min: Date.current  %></td>
+          <td><%= f.date_field :fin , min: Date.tomorrow %></td>
         </tr>
         <tr>
           <th><%= f.label :all ,"終日" %></th>
@@ -32,5 +32,3 @@
         </ul>
       </div>
     <% end %>
-    schedules             users               
-posts                 
